# if-addrs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: CI.yml  Cross.yml
examples/: detect_interface_changes.rs  list_interfaces.rs
if-addrs-sys/: Cargo.toml  build.rs  lib.rs
src/: ifaddrs_posix.rs  lib.rs  posix.rs  posix_not_mac.rs  sockaddr.rs  windows.rs
