[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>", "Messense Lv <messense@icloud.com>"]
description = "Return interface IP addresses on Posix and windows systems"
license = "MIT OR BSD-3-Clause"
name = "if-addrs"
readme = "README.md"
repository = "https://github.com/messense/if-addrs"
version = "0.6.6"
edition = "2018"

[dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "winerror", "ws2def", "ws2ipdef"] }

# getifaddrs/freeifaddrs requires Android API >= 24, use a custom C version here to support old versions
[target.'cfg(target_os = "android")'.dependencies.if-addrs-sys]
version = "0.3"
path = "if-addrs-sys"
