[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>", "Messense Lv <messense@icloud.com>"]
description = "Return interface IP addresses on Posix and windows systems"
license = "MIT OR BSD-3-Clause"
name = "if-addrs"
readme = "README.md"
repository = "https://github.com/messense/if-addrs"
version = "0.9.0"
edition = "2018"

[dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
]

[features]
link-local = []