[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>", "Messense Lv <messense@icloud.com>"]
build = "build.rs"
description = "if_addrs sys crate"
edition = "2018"
license = "MIT OR BSD-3-Clause"
links = "ifaddrs"
name = "if-addrs-sys"
repository = "https://github.com/messense/if-addrs"
version = "0.3.2"

[lib]
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
